[tool.poetry]
name = "gearhead-new"
version = "0.1.0"
description = ""
authors = ["João Victor Inocêncio Macedo de Aguiar <macdjoao@gmail.com>"]
readme = "README.md"
packages = [{include = "gearhead_new"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.3.2"
dynaconf = "^3.1.12"
flask-sqlalchemy = "^3.0.3"
flask-migrate = "^4.0.4"
flask-admin = "^1.6.1"
flask-restful = "^0.3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
